fixing Ubyssey header wrap

--- a/dispatch/themes/ubyssey/static/css/main.css
+++ b/dispatch/themes/ubyssey/static/css/main.css
@@ -280,17 +280,16 @@ header.topbar {
   z-index: 50;
   position: fixed;
   top: 0;
-  /* background: rgba(255, 255, 255, 0.98); */
   background: #fff;
   border-bottom: 1px solid #DADADA;
   box-shadow: rgba(0, 0, 0, 0.15) 0 0 3px 0;
 }
-/* line 117, sass/modules/_header.scss */
+/* line 114, sass/modules/_header.scss */
 header.topbar .section-name {
   display: inline-block;
   margin-right: 10px;
 }
-/* line 120, sass/modules/_header.scss */
+/* line 117, sass/modules/_header.scss */
 header.topbar .section-name span {
   margin-left: 7px;
   font-family: "ub-franklin-gothic", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
@@ -300,19 +299,20 @@ header.topbar .section-name span {
   text-transform: uppercase;
   color: #33331E;
 }
-/* line 131, sass/modules/_header.scss */
+/* line 128, sass/modules/_header.scss */
 header.topbar .header-article {
   display: none;
 }
-/* line 135, sass/modules/_header.scss */
+/* line 132, sass/modules/_header.scss */
 header.topbar img.logo {
   vertical-align: middle;
   margin-top: -2px;
   height: 20px;
 }
-/* line 140, sass/modules/_header.scss */
+/* line 137, sass/modules/_header.scss */
 header.topbar nav {
   display: inline-block;
+  white-space: nowrap;
   vertical-align: top;
   font-family: "ub-franklin-gothic", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-weight: 500;
@@ -320,30 +320,31 @@ header.topbar nav {
   color: #373737;
   margin-left: 20px;
 }
-/* line 148, sass/modules/_header.scss */
+/* line 146, sass/modules/_header.scss */
 header.topbar nav ul {
   line-height: 48px;
   list-style-type: none;
   padding: 0;
   margin: 0;
 }
-/* line 153, sass/modules/_header.scss */
+/* line 151, sass/modules/_header.scss */
 header.topbar nav ul li {
   display: inline-block;
   padding: 0 15px;
   height: 45px;
 }
-/* line 157, sass/modules/_header.scss */
+/* line 155, sass/modules/_header.scss */
 header.topbar nav ul li a {
   display: inline-block;
 }
-/* line 160, sass/modules/_header.scss */
+/* line 158, sass/modules/_header.scss */
 header.topbar nav ul li.current, header.topbar nav ul li:hover {
   border-bottom: 3px solid #3490d6;
 }
-/* line 167, sass/modules/_header.scss */
+/* line 165, sass/modules/_header.scss */
 header.topbar h1.nav-headline {
   display: inline-block;
+  white-space: nowrap;
   font-family: "ub-franklin-gothic", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-size: 14px;
   font-weight: 500;
@@ -353,7 +354,7 @@ header.topbar h1.nav-headline {
   margin-bottom: 0;
   margin-left: 10px;
 }
-/* line 178, sass/modules/_header.scss */
+/* line 177, sass/modules/_header.scss */
 header.topbar a.icon-logo {
   display: inline-block;
   width: 20px;
